自动提交变更